#215 Move BREE to JavaSE-11
Remove Java 16 constructs